--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-router-dom": "^5.2.0",
     "sip.js": "^0.20.0",
     "styled-components": "^5.3.5",
-    "vite-plugin-mix": "^0.3.1"
+    "vite-plugin-mix": "^0.3.1",
+    "zustand": "^4.0.0-rc.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
